Fix npm scripts

--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "book-tap",
   "description": "E-book library",
   "scripts": {
-    "start": "node dist/server.js",
-    "dev": "rimraf out/ tsc-watch -p tsconfig.json --onSuccess \"concurrently -p \"[{name}]\" -n \"LINT,SERVER\" -c \"bgBlue.bold,bgGreen.bold\" --kill-others \"yarn lint\" \"node out/server.js\"\"",
+    "start": "set NODE_ENV=production && node dist/server.js",
+    "start-dev": "set NODE_ENV=development && node out/server.js",
+    "dev": "rimraf out/ && tsc-watch -p tsconfig.json --onSuccess \"concurrently -p \"[{name}]\" -n \"LINT,SERVER\" -c \"bgBlue.bold,bgGreen.bold\" --kill-others-on-fail \"npm:lint\" \"npm:start-dev\"\"",
     "lint": "tslint -c tslint.json -p tsconfig.json",
-    "ts-watch": "rimraf out/ && tsc -w",
+    "ts-watch": "rimraf out/ && tsc-watch -p tsconfig.json",
     "ts-build": "rimraf dist/ && tsc --outDir dist/ --sourceMap false --incremental false",
     "build": "yarn lint && yarn ts-build"
   },
@@ -18,6 +19,7 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "express-validator": "^6.2.0",
+    "pg": "^7.12.1",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
@@ -30,6 +32,7 @@
     "@types/connect-redis": "^0.0.11",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.1",
     "@types/express-session": "^1.15.14",
     "@types/redis": "^2.8.13",
