--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "book-tap",
   "description": "E-book library",
   "scripts": {
-    "start": "set NODE_ENV=production && node dist/server.js",
-    "start-dev": "set NODE_ENV=development && node out/server.js",
+    "start": "export NODE_ENV=development || set NODE_ENV=production&& node dist/server.js",
+    "start-dev": "export NODE_ENV=development || set NODE_ENV=developent&& node out/server.js",
     "dev": "rimraf out/ && tsc-watch -p tsconfig.json --onSuccess \"concurrently -p \"[{name}]\" -n \"LINT,SERVER\" -c \"bgBlue.bold,bgGreen.bold\" --kill-others-on-fail \"npm:lint\" \"npm:start-dev\"\"",
     "lint": "tslint -c tslint.json -p tsconfig.json",
     "ts-watch": "rimraf out/ && tsc-watch -p tsconfig.json",
     "ts-build": "rimraf dist/ && tsc --outDir dist/ --sourceMap false --incremental false",
-    "build-server": "yarn lint && yarn ts-build",
+    "build-server": "yarn ts-build",
     "build-client": "yarn --cwd ./client install && yarn --cwd ./client build"
   },
   "dependencies": {
