--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "book-tap",
   "description": "E-book library",
   "scripts": {
-    "start": "export NODE_ENV=development || set NODE_ENV=production&& node dist/server.js",
+    "start": "export NODE_ENV=production || set NODE_ENV=production&& node dist/server.js",
     "start-dev": "export NODE_ENV=development || set NODE_ENV=developent&& node out/server.js",
     "dev": "rimraf out/ && tsc-watch -p tsconfig.json --onSuccess \"concurrently -p \"[{name}]\" -n \"LINT,SERVER\" -c \"bgBlue.bold,bgGreen.bold\" --kill-others-on-fail \"npm:lint\" \"npm:start-dev\"\"",
     "lint": "tslint -c tslint.json -p tsconfig.json",
