--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "description": "E-book library",
   "scripts": {
     "start": "export NODE_ENV=production || set NODE_ENV=production&& node dist/server.js",
-    "start-dev": "export NODE_ENV=development || set NODE_ENV=developent&& node out/server.js",
-    "dev": "rimraf out/ && tsc-watch -p tsconfig.json --onSuccess \"concurrently -p \"[{name}]\" -n \"LINT,SERVER\" -c \"bgBlue.bold,bgGreen.bold\" --kill-others-on-fail \"npm:lint\" \"npm:start-dev\"\"",
+    "dev-server": "export NODE_ENV=development || set NODE_ENV=developent&& node out/server.js",
+    "dev-client": "yarn --cwd ./client start",
+    "dev": "rimraf out/ && tsc-watch -p tsconfig.json --onSuccess \"concurrently -p \"[{name}]\" -n \"LINT,SERVER\" -c \"bgBlue.bold,bgGreen.bold\" --kill-others-on-fail \"npm:lint\" \"npm:dev-server\"\"",
     "lint": "tslint -c tslint.json -p tsconfig.json",
     "ts-watch": "rimraf out/ && tsc-watch -p tsconfig.json",
     "ts-build": "rimraf dist/ && tsc --outDir dist/ --sourceMap false --incremental false",
@@ -21,6 +22,7 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "express-validator": "^6.2.0",
+    "multer": "^1.4.2",
     "pg": "^7.12.1",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.13",
@@ -37,6 +39,7 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.1",
     "@types/express-session": "^1.15.14",
+    "@types/multer": "^1.3.10",
     "@types/redis": "^2.8.13",
     "concurrently": "^4.1.2",
     "node-sass": "^4.12.0",
