--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "book-tap",
-  "description": "E-book library",
+  "description": "E-book management library",
   "scripts": {
     "start": "export NODE_ENV=production || set NODE_ENV=production&& node dist/server.js",
     "dev-server": "export NODE_ENV=development || set NODE_ENV=developent&& node out/server.js",
     "dev-client": "yarn --cwd ./client start",
-    "dev": "rimraf out/ && tsc-watch -p tsconfig.json --onSuccess \"concurrently -p \"[{name}]\" -n \"LINT,SERVER,CLIENT\" -c \"bgBlue.bold,bgGreen.bold,bgRed.bold\" --kill-others-on-fail \"npm:lint\" \"npm:dev-server\" npm:dev-client\"",
+    "dev-demo": "concurrently -p \"[{name}]\" -n \"SERVER,CLIENT\" -c \"bgBlue.bold,bgGreen.bold,bgRed.bold\" --kill-others-on-fail \"npm:dev-server\" \"npm:dev-client\"",
+    "dev-full": "rimraf out/ && tsc-watch -p tsconfig.json --onSuccess \"concurrently -p \"[{name}]\" -n \"LINT,SERVER\" -c \"bgBlue.bold,bgGreen.bold\" --kill-others-on-fail \"npm:lint\" \"npm:dev-server\"\"",
+    "dev": "concurrently \"npm:dev-full\" \"npm:dev-client\"",
     "lint": "tslint -c tslint.json -p tsconfig.json",
     "ts-watch": "rimraf out/ && tsc-watch -p tsconfig.json",
     "ts-build": "rimraf dist/ && tsc --outDir dist/ --sourceMap false --incremental false",
@@ -23,6 +25,8 @@
     "express-session": "^1.16.2",
     "express-validator": "^6.2.0",
     "multer": "^1.4.2",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^7.12.1",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.13",
@@ -40,6 +44,7 @@
     "@types/express": "^4.17.1",
     "@types/express-session": "^1.15.14",
     "@types/multer": "^1.3.10",
+    "@types/passport-google-oauth20": "^2.0.2",
     "@types/redis": "^2.8.13",
     "concurrently": "^4.1.2",
     "node-sass": "^4.12.0",
