Change to safer buffer allocation

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "book-tap",
   "description": "E-book management library",
   "scripts": {
-    "start": "export NODE_ENV=production || set NODE_ENV=production&& node dist/server.js",
-    "dev-server": "export NODE_ENV=development || set NODE_ENV=developent&& node out/server.js",
+    "start": "node dist/server.js",
+    "dev-server": "set NODE_ENV=development&& node out/server.js",
     "dev-client": "yarn --cwd ./client start",
     "dev-demo": "concurrently -p \"[{name}]\" -n \"SERVER,CLIENT\" -c \"bgBlue.bold,bgGreen.bold,bgRed.bold\" --kill-others-on-fail \"npm:dev-server\" \"npm:dev-client\"",
     "dev-full": "rimraf out/ && tsc-watch -p tsconfig.json --onSuccess \"concurrently -p \"[{name}]\" -n \"LINT,SERVER\" -c \"bgBlue.bold,bgGreen.bold\" --kill-others-on-fail \"npm:lint\" \"npm:dev-server\"\"",
@@ -25,8 +25,6 @@
     "express-session": "^1.16.2",
     "express-validator": "^6.2.0",
     "multer": "^1.4.2",
-    "passport": "^0.4.0",
-    "passport-google-oauth20": "^2.0.0",
     "pg": "^7.12.1",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.13",
