--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "build": "yarn build-server && yarn build-client"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "connect-redis": "^4.0.2",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
+    "epub-metadata-parser": "^1.1.14",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
     "express-session": "^1.16.2",
     "express-validator": "^6.2.0",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "pg": "^7.12.1",
     "redis": "^2.8.0",
@@ -34,13 +38,16 @@
     "typescript": "^3.6.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/compression": "^1.0.1",
     "@types/connect-redis": "^0.0.11",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.1",
+    "@types/express-jwt": "^0.0.42",
     "@types/express-session": "^1.15.14",
+    "@types/jsonwebtoken": "^8.3.5",
     "@types/multer": "^1.3.10",
     "@types/passport-google-oauth20": "^2.0.2",
     "@types/redis": "^2.8.13",
