--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "connect-redis": "^4.0.2",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "dist-exiftool": "^10.53.0",
     "dotenv": "^8.1.0",
     "epub-metadata-parser": "^1.1.14",
     "express": "^4.17.1",
@@ -29,6 +30,7 @@
     "express-validator": "^6.2.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "node-exiftool": "^2.3.0",
     "pg": "^7.12.1",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.13",
