--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,10 @@
     "jwt-decode": "^2.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "redux": "^4.0.4",
     "typescript": "3.6.3"
   },
   "scripts": {
