--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "E-book management library",
   "scripts": {
     "start": "node dist/server.js",
-    "dev-server": "set NODE_ENV=development&& node out/server.js",
+    "dev-server": "export NODE_ENV=development&& node out/server.js",
     "dev-client": "yarn --cwd ./client start",
     "dev-demo": "concurrently -p \"[{name}]\" -n \"SERVER,CLIENT\" -c \"bgBlue.bold,bgGreen.bold,bgRed.bold\" --kill-others-on-fail \"npm:dev-server\" \"npm:dev-client\"",
     "dev-full": "rimraf out/ && tsc-watch -p tsconfig.json --onSuccess \"concurrently -p \"[{name}]\" -n \"LINT,SERVER\" -c \"bgBlue.bold,bgGreen.bold\" --kill-others-on-fail \"npm:lint\" \"npm:dev-server\"\"",
