--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "@types/react-dom": "16.9.0",
     "@types/react-router-dom": "^4.3.5",
     "axios": "^0.19.0",
+    "flux": "^3.1.3",
+    "js-file-download": "^0.4.8",
     "jwt-decode": "^2.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -17,7 +19,8 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
-    "typescript": "3.6.3"
+    "typescript": "3.6.3",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,5 +44,8 @@
     ]
   },
   "proxy": "http://localhost:5000",
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/flux": "^3.1.9",
+    "@types/uuid": "^3.4.6"
+  }
 }
