--- a/package.json
+++ b/package.json
@@ -28,16 +28,19 @@
     "express-jwt": "^5.3.1",
     "express-session": "^1.16.2",
     "express-validator": "^6.2.0",
+    "gm": "^1.23.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "node-exiftool": "^2.3.0",
+    "pdf-image": "^2.0.0",
     "pg": "^7.12.1",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "tsc-watch": "^3.0.1",
     "typeorm": "^0.2.19",
-    "typescript": "^3.6.3"
+    "typescript": "^3.6.3",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -49,6 +52,7 @@
     "@types/express": "^4.17.1",
     "@types/express-jwt": "^0.0.42",
     "@types/express-session": "^1.15.14",
+    "@types/gm": "^1.18.6",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/multer": "^1.3.10",
     "@types/passport-google-oauth20": "^2.0.2",
