--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-toastify": "^5.4.1",
     "redux": "^4.0.4",
     "typescript": "3.6.3",
     "uuid": "^3.3.3"
